--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,18 @@
 micronaut:
   application:
     name: clientService
+
+datasources:
+  default:
+    url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+    username: sa
+    schema-generate: CREATE_DROP
+    password: ''
+    dialect: H2
+
 netty:
   default:
     allocator:
       max-order: 3
+jpa.default.properties.hibernate.hbm2ddl.auto: update
