--- a/micronaut-cli.yml
+++ b/micronaut-cli.yml
@@ -3,4 +3,4 @@ defaultPackage: br.com.curso.udemy
 testFramework: junit
 sourceLanguage: kotlin
 buildTool: gradle
-features: [annotation-api, app-name, data, data-jpa, gradle, h2, http-client, jackson-databind, jdbc-hikari, junit, kotlin, kotlin-application, kotlin-build, logback, micronaut-build, netty-server, readme, shade, yaml]
+features: [annotation-api, app-name, data, data-jpa, gradle, http-client, jackson-databind, jdbc-hikari, junit, kotlin, kotlin-application, kotlin-build, logback, micronaut-build, mysql, netty-server, readme, shade, testcontainers, yaml]
