--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,15 +4,25 @@ micronaut:
 
 datasources:
   default:
-    url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
+    url: jdbc:mysql://localhost:3306/clientes-db
+    driverClassName: "com.mysql.cj.jdbc.Driver"
+    username: root
+    password: 12345678
     schema-generate: CREATE_DROP
-    password: ''
-    dialect: H2
+    dialect: MYSQL
+
+jpa:
+  default:
+    packages-to-scan:
+      - 'br.com.curso.udemy.model'
+    properties:
+      hibernate:
+        hbm2ddl:
+          auto: update
+        show_sql: true
+        format_sql: true
 
 netty:
   default:
     allocator:
       max-order: 3
-jpa.default.properties.hibernate.hbm2ddl.auto: update
