--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,7 @@ dependencies {
     kapt("io.micronaut:micronaut-http-validation")
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-jackson-databind")
-    implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
     implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
-    implementation("io.micronaut.sql:micronaut-jdbc-hikari")
     implementation("jakarta.annotation:jakarta.annotation-api")
     implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
@@ -32,6 +30,10 @@ dependencies {
     testImplementation("org.testcontainers:testcontainers")
     runtimeOnly("com.h2database:h2")
     implementation("io.micronaut:micronaut-validation")
+
+    // JPA
+    implementation("io.micronaut.sql:micronaut-jdbc-hikari")
+    implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
 
     runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
 
