--- a/build.gradle
+++ b/build.gradle
@@ -16,16 +16,21 @@ repositories {
 
 dependencies {
     kapt("io.micronaut.data:micronaut-data-processor")
+    kapt("io.micronaut.openapi:micronaut-openapi")
     kapt("io.micronaut:micronaut-http-validation")
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-jackson-databind")
     implementation("io.micronaut.kotlin:micronaut-kotlin-runtime")
+
+    // OpenAPI (Swagger)
+    implementation("io.swagger.core.v3:swagger-annotations")
+
     implementation("jakarta.annotation:jakarta.annotation-api")
     implementation("org.jetbrains.kotlin:kotlin-reflect:${kotlinVersion}")
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:${kotlinVersion}")
     runtimeOnly("ch.qos.logback:logback-classic")
     runtimeOnly("mysql:mysql-connector-java")
-    testImplementation("org.testcontainers:junit-jupiter")
+
     testImplementation("org.testcontainers:mysql")
     testImplementation("org.testcontainers:testcontainers")
     runtimeOnly("com.h2database:h2")
@@ -34,6 +39,17 @@ dependencies {
     // JPA
     implementation("io.micronaut.sql:micronaut-jdbc-hikari")
     implementation("io.micronaut.data:micronaut-data-hibernate-jpa")
+
+    // JUnit 5
+    testImplementation("org.testcontainers:junit-jupiter")
+    testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
+    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.0")
+
+    // Mockito
+    testImplementation("org.mockito.kotlin:mockito-kotlin:4.0.0")
+
+    // MockK
+    testImplementation("io.mockk:mockk:1.12.5")
 
     runtimeOnly("com.fasterxml.jackson.module:jackson-module-kotlin")
 
